# tray

./: .editorconfig  CMakeLists.txt  README.md  example.c  tray.h  tray_darwin.m  tray_linux.c  tray_windows.c
.github/workflows/: deploy.yaml  integrate.yaml
